fix mappers to init an empty tag list in domain object